<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Como_Comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/marck_script"
            android:textColor="@color/rose_gold_500"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginEnd="24dp"
        />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/rose_gold_200"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_Como_Comprar"
        android:contentDescription="@string/layoutcomplemento"
    />

    <TextView
        android:id="@+id/tv_Como_Comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/apresentacao"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_Como_Comprar"
    />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/rose_gold_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Como_Comprar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_Primeiro_Paragrafo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:text="@string/primeiro_paragrafo_como_comprar"
                android:textStyle="normal"
                android:textColor="@color/rose_gold_500"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

            <TextView
                android:id="@+id/tv_Segundo_Paragrafo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:text="@string/segundo_paragrafo_como_comprar"
                android:textStyle="normal"
                android:textColor="@color/rose_gold_500"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_Primeiro_Paragrafo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

            <TextView
                android:id="@+id/tv_Terceiro_Paragrafo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:text="@string/terceiro_paragrafo_como_comprar"
                android:textStyle="normal"
                android:textColor="@color/rose_gold_500"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_Segundo_Paragrafo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

            <TextView
                android:id="@+id/tv_Quarto_Paragrafo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:text="@string/quarto_paragrafo_como_comprar"
                android:textStyle="normal"
                android:textColor="@color/rose_gold_500"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_Terceiro_Paragrafo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>